v4.2.0/_sources/generated/generated/pcdsdevices.ccm.CCMPico.rst.txt
pcdsdevices.ccm.CCMPico
=======================

.. currentmodule:: pcdsdevices.ccm

.. autoclass:: CCMPico

   
   
    .. list-table:: Ophyd Device Components
       :header-rows: 1
       :widths: auto

       *  - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
   
       *  -  user_readback
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.RBV``
          -  
          -  hinted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  user_setpoint
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.VAL``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  user_offset
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.OFF``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  user_offset_dir
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DIR``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  offset_freeze_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.FOFF``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  set_use_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.SET``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  velocity
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.VELO``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  acceleration
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.ACCL``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  motor_egu
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.EGU``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  motor_is_moving
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.MOVN``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  motor_done_move
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.DMOV``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  high_limit_switch
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.HLS``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  low_limit_switch
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.LLS``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  high_limit_travel
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HLM``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  low_limit_travel
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.LLM``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  direction_of_travel
          -  :class:`~ophyd.signal.Signal`
          -  
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  motor_stop
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.STOP``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  home_forward
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HOMF``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  home_reverse
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HOMR``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  disabled
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DISP``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  description
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DESC``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   
       *  -  dial_position
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.DRBV``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.EpicsMotorInterface`
   

   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   

   
   


    
    
    .. rubric:: Methods

    .. autosummary::
       :toctree: generated
    
       ~CCMPico.camonitor
       ~CCMPico.check_limit_switches
       ~CCMPico.clear_limits
       ~CCMPico.configure
       ~CCMPico.describe
       ~CCMPico.disable
       ~CCMPico.enable
       ~CCMPico.end_monitor_thread
       ~CCMPico.get
       ~CCMPico.get_high_limit
       ~CCMPico.get_lim
       ~CCMPico.get_low_limit
       ~CCMPico.home
       ~CCMPico.move
       ~CCMPico.mv
       ~CCMPico.mv_ginput
       ~CCMPico.mvr
       ~CCMPico.read
       ~CCMPico.read_configuration
       ~CCMPico.set
       ~CCMPico.set_current_position
       ~CCMPico.set_high_limit
       ~CCMPico.set_lim
       ~CCMPico.set_low_limit
       ~CCMPico.stop
       ~CCMPico.summary
       ~CCMPico.trigger
       ~CCMPico.tweak
       ~CCMPico.umv
       ~CCMPico.umvr
       ~CCMPico.wait
       ~CCMPico.wm
       ~CCMPico.wm_update
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::
    
       ~CCMPico.configuration_attrs
       ~CCMPico.connected
       ~CCMPico.egu
       ~CCMPico.high_limit
       ~CCMPico.hints
       ~CCMPico.kind
       ~CCMPico.limits
       ~CCMPico.low_limit
       ~CCMPico.moving
       ~CCMPico.position
       ~CCMPico.precision
       ~CCMPico.presets
       ~CCMPico.settle_time
       ~CCMPico.timeout
       ~CCMPico.tolerated_alarm
    
    